src/objects/License_History_Property__c.object
<CustomObject>
    <fields>
        <fullName>License_History_Tracking__c</fullName>
        <label>License History Tracking</label>
        <referenceTo>License_History_Tracking__c</referenceTo>
        <relationshipLabel>License History Property</relationshipLabel>
        <relationshipName>License_History_Property</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Field_Name__c</fullName>
        <label>Property Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Object_ID__c</fullName>
        <label>Property Object ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Object_Name__c</fullName>
        <label>Property Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>License History Property</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License History Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License History Property</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>